# CheckersOnBevy

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml
assets/: actor_critic.pt
checkers/: MTSC.ipynb  env.py  environment_pb2.py  monte_carlo_tree.py
checkers-ai/: Cargo.toml  MTSC-go.ipynb  MTSC.ipynb  README.md  monte_carlo_tree.py
checkers-ai/python/: MTSC-Checkers.ipynb  MTSC-Go.ipynb  MTSC-Ugolki.ipynb  MTSC.ipynb  actor_critic.pt  actor_critic_go.pt  demo.py  env.py  environment_pb2_grpc.py  monte_carlo_tree.py
checkers-ai/python/gym_go/envs/: go_env.py
checkers-ai/src/: brain.rs  lib.rs
checkers-app/: Cargo.toml  README.md
checkers-app/src/: ai.rs  app.rs  bevy_frontend.rs  board.rs  lib.rs  main.rs  ui.rs  veilid.rs
checkers-client/: Cargo.toml  README.md  build.rs
checkers-client/src/: main.rs
checkers-core/: Cargo.toml  README.md
checkers-core/assets/: microsoft.glb
checkers-core/src/: bevy_frontend.rs  brain.rs  client.rs  game.rs  gym_env.rs  lib.rs  main.rs
checkers-p2p/: Cargo.toml  README.md
checkers-p2p/src/: main.rs
checkers-server/: Cargo.toml
checkers-server/src/: main.rs
examples/: mutable_references.rs  test.py
proto/: environment.proto
src/: animations.rs  bevy_app.rs  board.rs  client.rs  game.rs  gym_env.rs  lib.rs  main.rs  materials.rs  pieces.rs  server.rs  ui.rs
