[package]
edition = "2021"
name = "checkers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = {version = "1.0", default-features = false}
bevy = {version = "0.6.0"}
bevy-inspector-egui = {version = "0.7.2"}
bevy_mod_picking = {git = "https://github.com/aevyrie/bevy_mod_picking"}
bevy_tweening = {version = "0.2.0"}
pyo3 = { version = "0.15.1", features = ["extension-module"] }
dict_derive = "0.4.0"

[lib]
name = "checkers"
crate-type = ["cdylib"]
