[package]
edition = "2021"
name = "checkers-app"
version = "0.6.0"

[dependencies]
bevy = { version = "0.11" }
bevy_tasks = "0.11"
bevy_mod_picking = { version = "0.15", features = [    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "selection",
    "highlight",] }
bevy_tweening = { version ="0.8" }
futures = "0.3"
checkers-ai = { path = "../checkers-ai" }
checkers-core = { path = "../checkers-core" }
bevy-inspector-egui = "0.20"
clap = { version = "4.3.21", features = ["derive"] }
bevy_veilid = {path="../../bevy_veilid"}
copypasta = "0.10"
serde = { version = "1.0.188", features= ["derive"] }