[package]
edition = "2021"
name = "checkers-client"
version = "0.3.0"

[dependencies]
anyhow = "1.0"
bevy = { version = "0.8.1" }
bevy_tasks = "0.8.1"
checkers-app = { path = "../checkers-app", version = "^0.2.0" }
checkers-core = { path = "../checkers-core", version = "^0.2.0" }
futures = "0.3"
prost = "0.11.0"
serde = "1.0.136"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
