[package]
edition = "2021"
name = "checkers-core"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = {version = "0.6.0"}
bevy-inspector-egui = {version = "0.7.2"}
bevy_mod_picking = {version="0.5.2"}
bevy_tweening = {version = "0.3.0"}
futures = "0.3"
serde = "1.0.136"
serde_json = "1.0"
anyhow = "1.0"
