[package]
edition = "2021"
name = "checkers-server"
version = "0.2.0"

[dependencies]
checkers-core = { path = "../checkers-core", version = "^0.2.0" }
prost = "0.11.0"
serde = "1.0.136"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
