[package]
edition = "2021"
name = "checkers-server"
version = "0.3.0"

[dependencies]
checkers-core = { path = "../checkers-core" }
prost = "0.12"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10"

[build-dependencies]
tonic-build = "0.10"
